--- a/404.html
+++ b/404.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <h1>Error: Page not found</h1>
   </body>
 </html>
