--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
     <div id="app"></div>
     <script>
       // if the current page exists, we redirect to it (vue router)
-      window.location = window.location.base;
+      window.location = "https://curseforged.vercel.app"
     </script>
     <h1>Error: Page not found</h1>
   </body>
